--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -83,17 +83,12 @@
             <label for="validatorText{{ i }}{{ uniqId }}"
                    class="sr-only"
                    i18n>Fehlermeldung für Benutzer*</label>
-            <input type="text"
-                   class="form-control"
-                   [(ngModel)]="item.text.default"
-                   (change)="modelChanged($event)"
-                   [class.is-invalid]="!item.text.default"
-                   id="validatorText{{ i }}{{ uniqId }}"
-                   name="validatorText{{ i }}{{ uniqId }}"
-                   i18n-placeholder
-                   placeholder="Fehlermeldung für Benutzer"
-                   maxlength="200"
-                   required>
+            <power-forms-editor-localeinput [(locale)]="item.text"
+                                            eid="validatorText{{ i }}{{ uniqId }}"
+                                            required="true"
+                                            maxlength="200"
+                                            i18n-placeholder
+                                            placeholder="Fehlermeldung für Benutzer"></power-forms-editor-localeinput>
         </div>
 
         <div class="form-group col-4 mb-0"
