Added locale input test and fixed linter warnings

--- a/power/src/app/fragebogen/editor/localeinput/localeinput.component.html
+++ b/power/src/app/fragebogen/editor/localeinput/localeinput.component.html
@@ -16,6 +16,7 @@
 
     <div class="form-group col-12 col-md-10 mt-1 mt-md-0 mb-0"
          *ngIf="!textarea">
+        <!-- [html-validate-disable-next element-required-attributes] -->
         <input [type]="type"
                class="form-control"
                [(ngModel)]="locale[displayLang]"
