improved accessibility start component

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -149,27 +149,21 @@
             </div>
             <div class="row justify-content-around">
                 <div class="col-md-4 text-center">
-                    <h5 tabindex="0"
-                        aria-label="Sprachauswahl"
-                        aria-i18n-label
-                        i18n>Sprache</h5>
+                    <h5 i18n>Sprache</h5>
                     <a href="{{ baseurl }}"
                        class="footer-link"
-                       aria-label="Deutsch"
+                       aria-label="Sprache wechseln zu Deutsch"
                        aria-i18n-label>Deutsch</a>
                     - <a href="/en{{ baseurl }}"
                        class="footer-link"
-                       aria-label="Englisch"
+                       aria-label="Sprache wechseln zu Englisch"
                        aria-i18n-label>English</a>
                     - <a href="/ja{{ baseurl }}"
-                       aria-label="Japanisch"
+                       aria-label="Sprache wechseln zu Japanisch"
                        aria-i18n-label
                        class="footer-link">日本語</a>
                     <hr>
-                    <h5 tabindex="0"
-                        aria-label="Webseiten Informationen"
-                        aria-i18n-label
-                        i18n>Informationen</h5>
+                    <h5 i18n>Informationen</h5>
                     <ul class="list-unstyled text-small">
                         <li class="m-2"><a
                                href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html"
