--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,20 +1,20 @@
 <div class="container-xl border-left border-right">
     <section class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
         <div class="col-lg-6 p-0">
-            <div class= "boris-img col-lg-12 p-0"></div>
+            <div class="boris-img col-lg-12 p-0"></div>
         </div>
         <div class="col-lg-6 px-0 pl-lg-5 pt-2 pt-lg-0">
             <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
-                   id="Boris.NI"
+                   id="boris"
                    [routerLink]="['/bodenrichtwerte']"
-                   aria-labelledby="Boris.NI BorisSub"
-                   i18n>BORIS.NI</a>   
-                <p class="h6"
-                   id="BorisSub"
-                   i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</p>
+                   aria-labelledby="boris borisSub"
+                   aria-describedby="descriptionBoris"
+                   i18n>BORIS.NI</a>
+                <h6 id="borisSub"
+                    i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</h6>
                 <p class="lead text-justify"
-                   tabindex="0"
+                   id="descriptionBoris"
                    i18n>{{ 'Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte' +
                     ' in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und' +
                     ' für Flächen der Land- und Forstwirtschaft zur Verfügung.' | hyphenate }} </p>
@@ -28,12 +28,12 @@
                    id="nipix"
                    [routerLink]="['/immobilienpreisindex']"
                    aria-labelledby="nipix nipixSub"
+                   aria-describedby="descriptionNipix"
                    i18n>NIPIX</a>
-                <p class="h6"
-                   id="nipixSub"
-                   i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</p>
+                <h6 id="nipixSub"
+                    i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</h6>
                 <p class="lead text-justify"
-                   tabindex="0"
+                   id="descriptionNipix"
                    i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
                     ' Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
                     ' „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
@@ -52,10 +52,10 @@
             <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/forms']"
-                   tabindex="0"
+                   aria-describedby="descriptionForm"
                    i18n>Online Formulare</a>
                 <p class="lead text-justify pt-3"
-                   tabindex="0"
+                   id="descriptionForm"
                    i18n>
                     {{ 'Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden. ' +
                    'Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und ausfüllen.' | hyphenate }}
@@ -102,7 +102,7 @@
 <section class="container-xl mt-5">
     <div class="row jumbotron mb-0">
         <div class="col-lg-12">
-            <h2 id=news 
+            <h2 id=news
                 aria-label="News">
                 <svg width="1em"
                      height="1em"
@@ -117,21 +117,15 @@
                     <path fill-rule="evenodd"
                           d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
                 </svg>
-                <span class="ml-1"
-                      aria-labelledby="news"
-                      tabindex="0"
-                      i18n>News</span>
             </h2>
             <hr class="my-4">
         </div>
         <div class="col-lg-6">
-            <h5 tabindex="0"
-                i18n>{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
+            <h5 i18n>{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
             <a>{{ 'Eine Dekade steigender Preise in Niedersachsen...' | hyphenate }}</a>
         </div>
         <div class="col-lg-6">
-            <h5 tabindex="0"
-                i18n>{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
+            <h5 i18n>{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
             <a>{{ 'Die neuen Bodenrichtwerte sind jetzt verfügbar...' | hyphenate }}</a>
         </div>
     </div>
