--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -149,26 +149,26 @@
                 <div class="col-md-4 text-center">
                     <h5 id="languages"
                         aria-label="Sprachauswahl"
-                        aria-i18n-label
+                        i18n-aria-label
                         i18n>Sprache</h5>
                     <a href="{{ baseurl }}"
                        id="de"
                        class="footer-link"
                        aria-labelledby="languages de"
                        aria-label="Deutsch"
-                       aria-i18n-label>Deutsch</a>
+                       i18n-aria-label>Deutsch</a>
                     - <a href="/en{{ baseurl }}"
                        id="en"
                        class="footer-link"
                        aria-labelledby="languages en"
                        aria-label="Englisch"
-                       aria-i18n-label>English</a>
+                       i18n-aria-label>English</a>
                     - <a href="/ja{{ baseurl }}"
                        id="ja"
                        class="footer-link"
                        aria-label="Japanisch"
                        aria-labelledby="languages ja"
-                       aria-i18n-label>日本語</a>
+                       i18n-aria-label>日本語</a>
                     <hr>
                     <h5 i18n>Informationen</h5>
                     <ul class="list-unstyled text-small">
