--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -391,21 +391,19 @@
                     </div>
 
                     <!-- question-acceptedTypes-->
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label for="form-acceptedTypes"
                                i18n>Erlaubte Dateitypen</label>
                         <select class="custom-select"
                                 [(ngModel)]="model.pages[page].elements[question].acceptedTypes"
                                 id="form-acceptedTypes"
                                 name="form-acceptedTypes">
-                            <!--<option value=""
-                                        i18n>Alles erlauben</option>-->
                             <option value="application/pdf"
                                     i18n>PDF-Dokumente</option>
-                            <option value="image/*"
+                            <option value="image/png,image/jpeg,image/gif"
                                     i18n>Bilder</option>
                         </select>
-                    </div>
+                    </div>-->
 
                     <!-- question-maxSize -->
                     <div class="form-group">
